--- a/aboutme.html
+++ b/aboutme.html
@@ -248,7 +248,7 @@
     
             // Wait for the fade-out animation to complete before navigating
             setTimeout(function() {
-                window.location.href = "main.html";
+                window.location.href = "index.html";
             }, 1000);
         }
     </script>
